# OpenSourceSoftware4966

./: .gitignore  README.md  bio.md  lab1.md
labs/lab1/: lab.txt  lab1.md  lab1.txt
labs/lab10/: checkpoint4.py  checkpoint5.py  lab10.md  lab10.txt
labs/lab11/: basic_classification.ipynb  imgproc.ipynb  imgproc.py  lab11.md  lab11.py  lab11.txt
labs/lab2/: lab2.md  lab2.txt
labs/lab3/: lab3.md  lab3.txt  markdown.py  test_markdown_unittest.py
labs/lab3/resource/stats/: authors.html  gitstats.cache  tags.html
labs/lab3/stats/: activity.html  commits_by_author.plot  files.html  index.html  lines.html  lines_of_code_by_author.plot
labs/lab4/: lab4.md  lab4.txt
labs/lab5/: lab5.md  lab5.txt
labs/lab5/Lab-Example/: cmake_install.cmake  dynamic_block  libsharedLib.dylib
labs/lab5/cmake-example/: CMakeCache.txt  CMakeLists.txt  Makefile  program.c  static_block
labs/lab5/makefile-example/: Makefile  dynamic_block  static_block
labs/lab6/: exam.py  lab6.md  lab6.txt  path.py
labs/lab6/resource/: ladder.py  words4_dat.txt  words_dat.txt
labs/lab7/: lab7.md  lab7.txt
labs/lab8/: lab8.md  lab8.txt
labs/lab9/: lab9.md  lab9.txt
